Fixed nav bar icons on small screens

--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -67,8 +67,10 @@
     align-items: center;
     justify-content: center;
 
-    @media screen and (max-width: $breakpoint-small) {
-        flex-direction: column;
+    &.button-group-responsive {
+        @media screen and (max-width: $breakpoint-small) {
+            flex-direction: column;
+        }
     }
 
     & > .button,
